k8s/networks/services-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - targetPort: 8000
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app
spec:
  selector:
    app: db
  ports:
    - targetPort: 5432
      port: 5432
