k8s/networks/ingress-controllers.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)   
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /(.*)           
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80






# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-backend
#   namespace: app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 8000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-frontend
#   namespace: app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
